--- a/lab2/lab2/Base.lproj/Main.storyboard
+++ b/lab2/lab2/Base.lproj/Main.storyboard
@@ -73,6 +73,23 @@
                                     <action selector="yearChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="9xF-rA-LpM"/>
                                 </connections>
                             </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9l-Bl-8NW">
+                                <rect key="frame" x="106" y="378" width="175" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="qki-a9-lrS"/>
+                                    <constraint firstAttribute="width" constant="175" id="y5G-jA-b4f"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rb1-Hd-iRV">
+                                <rect key="frame" x="152" y="561" width="0.0" height="0.0"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="BodoniSvtyTwoOSITCTT-Book" family="Bodoni 72 Oldstyle" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="qK8-GY-0kD">
                                 <rect key="frame" x="39.5" y="425" width="296" height="29"/>
                                 <constraints>
@@ -89,16 +106,6 @@
                                     <action selector="charChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="rKz-tq-tIF"/>
                                 </connections>
                             </segmentedControl>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9l-Bl-8NW">
-                                <rect key="frame" x="106" y="378" width="175" height="33"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="33" id="qki-a9-lrS"/>
-                                    <constraint firstAttribute="width" constant="175" id="y5G-jA-b4f"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Xri-KZ-sO1">
                                 <rect key="frame" x="90.5" y="473" width="194" height="31"/>
                                 <subviews>
@@ -121,13 +128,6 @@
                                     <constraint firstAttribute="width" constant="194" id="qck-Bo-rmZ"/>
                                 </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rb1-Hd-iRV">
-                                <rect key="frame" x="152" y="561" width="0.0" height="0.0"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="BodoniSvtyTwoOSITCTT-Book" family="Bodoni 72 Oldstyle" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="17" minValue="17" maxValue="30" translatesAutoresizingMaskIntoConstraints="NO" id="rsW-yo-rkT">
                                 <rect key="frame" x="37.5" y="531" width="300" height="31"/>
                                 <constraints>
@@ -147,24 +147,58 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="t9l-Bl-8NW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="6" id="2Wy-2N-xwg"/>
-                            <constraint firstItem="rsW-yo-rkT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4Fv-xT-ot6"/>
-                            <constraint firstItem="k1H-h5-Ql9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4mz-bC-duD"/>
-                            <constraint firstItem="qK8-GY-0kD" firstAttribute="top" secondItem="t9l-Bl-8NW" secondAttribute="bottom" constant="14" id="Bnl-tm-hOz"/>
-                            <constraint firstItem="Xri-KZ-sO1" firstAttribute="top" secondItem="qK8-GY-0kD" secondAttribute="bottom" constant="20" id="Cdl-Mi-4kV"/>
-                            <constraint firstItem="rsW-yo-rkT" firstAttribute="top" secondItem="Xri-KZ-sO1" secondAttribute="bottom" constant="27" id="Jw1-7v-fXR"/>
-                            <constraint firstItem="qK8-GY-0kD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OMV-tB-k1K"/>
-                            <constraint firstItem="5NG-dN-W0W" firstAttribute="top" secondItem="k1H-h5-Ql9" secondAttribute="bottom" constant="25" id="UKP-Z9-o5B"/>
-                            <constraint firstItem="xFM-GC-oGh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UNW-Re-JWX"/>
-                            <constraint firstItem="tVy-Z4-Jtl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ah1-lr-1tU"/>
+                            <constraint firstItem="t9l-Bl-8NW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="6" id="2Wy-2N-xwg">
+                                <variation key="heightClass=compact" constant="186"/>
+                            </constraint>
+                            <constraint firstItem="rsW-yo-rkT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4Fv-xT-ot6">
+                                <variation key="heightClass=compact" constant="-123.5"/>
+                            </constraint>
+                            <constraint firstItem="k1H-h5-Ql9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4mz-bC-duD">
+                                <variation key="heightClass=compact" constant="-164.5"/>
+                            </constraint>
+                            <constraint firstItem="qK8-GY-0kD" firstAttribute="top" secondItem="t9l-Bl-8NW" secondAttribute="bottom" constant="14" id="Bnl-tm-hOz">
+                                <variation key="heightClass=compact" constant="-119"/>
+                            </constraint>
+                            <constraint firstItem="Xri-KZ-sO1" firstAttribute="top" secondItem="qK8-GY-0kD" secondAttribute="bottom" constant="20" id="Cdl-Mi-4kV">
+                                <variation key="heightClass=compact" constant="19"/>
+                            </constraint>
+                            <constraint firstItem="rsW-yo-rkT" firstAttribute="top" secondItem="Xri-KZ-sO1" secondAttribute="bottom" constant="27" id="Jw1-7v-fXR">
+                                <variation key="heightClass=compact" constant="22"/>
+                            </constraint>
+                            <constraint firstItem="qK8-GY-0kD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OMV-tB-k1K">
+                                <variation key="heightClass=compact" constant="-123.5"/>
+                            </constraint>
+                            <constraint firstItem="5NG-dN-W0W" firstAttribute="top" secondItem="k1H-h5-Ql9" secondAttribute="bottom" constant="25" id="UKP-Z9-o5B">
+                                <variation key="heightClass=compact" constant="-28"/>
+                            </constraint>
+                            <constraint firstItem="xFM-GC-oGh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UNW-Re-JWX">
+                                <variation key="heightClass=compact" constant="-164"/>
+                            </constraint>
+                            <constraint firstItem="tVy-Z4-Jtl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ah1-lr-1tU">
+                                <variation key="heightClass=compact" constant="-122.75"/>
+                            </constraint>
                             <constraint firstItem="VX6-mr-orl" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="dCs-87-Bve"/>
-                            <constraint firstItem="Xri-KZ-sO1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ewO-HY-OgT"/>
-                            <constraint firstItem="t9l-Bl-8NW" firstAttribute="top" secondItem="5NG-dN-W0W" secondAttribute="bottom" constant="14" id="fhP-iX-rzx"/>
-                            <constraint firstItem="k1H-h5-Ql9" firstAttribute="top" secondItem="xFM-GC-oGh" secondAttribute="bottom" constant="25" id="g5q-ve-qO5"/>
-                            <constraint firstItem="5NG-dN-W0W" firstAttribute="leading" secondItem="k1H-h5-Ql9" secondAttribute="trailing" constant="-224" id="hgG-y6-z2D"/>
-                            <constraint firstItem="tVy-Z4-Jtl" firstAttribute="top" secondItem="rsW-yo-rkT" secondAttribute="bottom" constant="18" id="qDh-Md-HDk"/>
-                            <constraint firstItem="xFM-GC-oGh" firstAttribute="top" secondItem="VX6-mr-orl" secondAttribute="bottom" constant="20" id="rRV-h9-niv"/>
-                            <constraint firstItem="5NG-dN-W0W" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wlP-Mg-zAG"/>
+                            <constraint firstItem="Xri-KZ-sO1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ewO-HY-OgT">
+                                <variation key="heightClass=compact" constant="-164.5"/>
+                            </constraint>
+                            <constraint firstItem="t9l-Bl-8NW" firstAttribute="top" secondItem="5NG-dN-W0W" secondAttribute="bottom" constant="14" id="fhP-iX-rzx">
+                                <variation key="heightClass=compact" constant="8"/>
+                            </constraint>
+                            <constraint firstItem="k1H-h5-Ql9" firstAttribute="top" secondItem="xFM-GC-oGh" secondAttribute="bottom" constant="25" id="g5q-ve-qO5">
+                                <variation key="heightClass=compact" constant="8"/>
+                            </constraint>
+                            <constraint firstItem="5NG-dN-W0W" firstAttribute="leading" secondItem="k1H-h5-Ql9" secondAttribute="trailing" constant="-224" id="hgG-y6-z2D">
+                                <variation key="heightClass=compact" constant="126"/>
+                            </constraint>
+                            <constraint firstItem="tVy-Z4-Jtl" firstAttribute="top" secondItem="rsW-yo-rkT" secondAttribute="bottom" constant="18" id="qDh-Md-HDk">
+                                <variation key="heightClass=compact" constant="16"/>
+                            </constraint>
+                            <constraint firstItem="xFM-GC-oGh" firstAttribute="top" secondItem="VX6-mr-orl" secondAttribute="bottom" constant="20" id="rRV-h9-niv">
+                                <variation key="heightClass=compact" constant="-5"/>
+                            </constraint>
+                            <constraint firstItem="5NG-dN-W0W" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wlP-Mg-zAG">
+                                <variation key="heightClass=compact" constant="185.5"/>
+                            </constraint>
                             <constraint firstItem="VX6-mr-orl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ytX-cB-6jL"/>
                         </constraints>
                     </view>
