--- a/Midterm1.1/Midterm/Base.lproj/Main.storyboard
+++ b/Midterm1.1/Midterm/Base.lproj/Main.storyboard
@@ -99,7 +99,7 @@
                                     <action selector="transChangeSwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="13k-MO-WUx"/>
                                 </connections>
                             </segmentedControl>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="car" translatesAutoresizingMaskIntoConstraints="NO" id="n7f-SU-iLU">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bike" translatesAutoresizingMaskIntoConstraints="NO" id="n7f-SU-iLU">
                                 <rect key="frame" x="67" y="474" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -166,6 +166,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="car" width="16" height="16"/>
+        <image name="bike" width="16" height="16"/>
     </resources>
 </document>
