--- a/Android/project 2/Milestone 3/BDGT/app/src/main/res/layout/activity_main.xml
+++ b/Android/project 2/Milestone 3/BDGT/app/src/main/res/layout/activity_main.xml
@@ -145,10 +145,12 @@
         android:id="@+id/button"
         android:layout_width="85dp"
         android:layout_height="36dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+
         android:text="@string/set"
-        android:onClick="getValues"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rentBudget" />
 
     <TextView
@@ -156,13 +158,13 @@
         android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/josefin_sans_semibold"
         android:text="@string/addItem"
         android:textColor="#000000"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/foodBudget" />
 
     <Spinner
         android:id="@+id/spinner"
