--- a/Android/Burrito_Builder/app/src/main/res/layout/activity_main.xml
+++ b/Android/Burrito_Builder/app/src/main/res/layout/activity_main.xml
@@ -130,17 +130,6 @@
         app:layout_constraintStart_toEndOf="@+id/cheeseCheck"
         app:layout_constraintTop_toBottomOf="@+id/lettuceCheck" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/build"
-        android:onClick="findBurrito"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="153dp"
@@ -148,7 +137,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/buildBtn" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -169,10 +158,10 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/buildBtn" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/findBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -180,4 +169,15 @@
         android:text="@string/findBur"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/buildBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/build"
+        android:onClick="makeBurrito"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 </android.support.constraint.ConstraintLayout>
